--- a/src/css/config.css
+++ b/src/css/config.css
@@ -58,7 +58,7 @@ body {
 #perfil-nav > .p2 {
   color: var(--primary);
   font-size: 24px;
-  font-weight: 500;
+  font-weight: 600;
   margin-top: 15px;
   margin-left: -5px;
 }
@@ -84,7 +84,7 @@ body {
 }
 
 #home {
-  margin-top: 70px;
+  margin-top: 60px;
   width: 80vw;
   height: 700px;
   display: flex;
@@ -132,4 +132,69 @@ body {
   height: 350px;
   opacity: .4;
   border-radius: 50%;
+}
+
+/* Projects */
+.title-ink {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+.title {
+  font-size: 64px;
+  font-weight: 600;
+  color: var(--primary);
+}
+
+.title-ink img {
+  width: 54px;
+  height: 54px;
+}
+
+.list-projects {
+  display: flex;
+  gap: 20px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  height: 420px;
+  border-radius: 8px;
+  background-color: var(--font-black);
+  padding: 10px 5px;
+  margin-bottom: 50px;
+}
+
+.title-card {
+  color: var(--font-write);
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.card img {
+  border-radius: 8px;
+  margin: 5px 0;
+  width: 290px;
+}
+
+.techs {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.title-tech {
+  color: var(--font-write);
+  font-size: 24px;
+}
+
+.techs img {
+  width: 30px;
+  height: 30px;
 }
