--- a/src/css/config.css
+++ b/src/css/config.css
@@ -85,9 +85,8 @@ body {
 }
 
 #home {
-  margin-top: 60px;
   width: 80vw;
-  height: 700px;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -141,9 +140,18 @@ body {
 
 /* Projects */
 #projects {
+  width: 80vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   & .title-ink {
     display: flex;
     align-items: center;
+    text-align: left;
+    width: 80vw;
     gap: 20px;
     margin-bottom: 50px;
 
@@ -161,7 +169,7 @@ body {
 
   & .list-projects {
     display: flex;
-    gap: 20px;
+    gap: 15px;
 
     & .card {
       display: flex;
@@ -175,6 +183,8 @@ body {
       margin-bottom: 50px;
 
       & .title-card {
+        text-align: left;
+        width: 290px;
         color: var(--font-write);
         font-size: 24px;
         font-weight: 600;
